and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

16th October 2014 P. Gumplinger (op-V10-00-07)
- previous tag was committed only to /include directory

10th October 2014 P. Gumplinger (op-V10-00-06)
- G4OpRayleigh Process: This version calculates the Rayleigh scattering
  length for more materials than just Water (although the Water default
  is kept). To do this the user would need to specify the
  ISOTHERMAL_COMPRESSIBILITY as a material property and optionally an
  RS_SCALE_LENGTH (useful for testing). Code comes from Philip Graham
  (Queen Mary University of London).

9th October 2014 P. Gumplinger (op-V10-00-05)
- G4OpBoundaryProcess allow for a Transmittance, Reflectivity and
  Absorption on dielectric_dielectric and dielectric_metal boundaries 

10th June 2014 P. Gumplinger (op-V10-00-04)
- G4OpWLS always rebuild theIntegralTable in BuildPhysicsTable method
- G4OpRayleigh always rebuild thePhysicsTable in BuildPhysicsTable method
- remove the private method BuildThePhysicsTable

6th June 2014 P. Gumplinger (op-V10-00-03)
- implement the full UNIFIED reflectivity probabilities when a
  dichroic surface reflects

23rd December 2013 M. Asai (op-V10-00-02)
- Additional protection.

22nd December 2013 M. Asai (op-V10-00-01)
- move construction of WLSTimeGeneratorProfile to the constructor of G4OpWLS.

18th December 2013 P. Gumplinger (op-V10-00-00)
- make WLSTimeGeneratorProfile and UseTimeProfile static in G4OpWLS

26th August 2013 P. Gumplinger (op-V09-06-06)
- move theStatus assignment for Dichroic where the decision is actually made
- made the necessary and required modifications for G4OpBoundaryProcess to
  work in situations with parallel worlds